--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "James Ocana",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.2"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.9.2",
+    "nodemon": "^2.0.20"
   }
 }
