--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Numero backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "npm run build && gcloud app deploy"
   },
   "keywords": [],
   "author": "James Ocana",
