--- a/app.yaml
+++ b/app.yaml
@@ -10,4 +10,4 @@ handlers:
   - url: /.*
     script: auto
     http_headers:
-    Access-Control-Allow-Origin: *
+    Access-Control-Allow-Origin: "*"
