added simple profanity filter for usernames

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "James Ocana",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
